--- a/templates/app/result.html
+++ b/templates/app/result.html
@@ -23,10 +23,10 @@
                 
                 <!-- Simple Result Section -->
                 <div class="text-center mb-4">
-                    <div class="fs-5 fw-bold 
+                    <div class="fw-bold 
                         {% if prediction.status == 'Healthy' %}bg-success text-white
                         {% elif prediction.status == 'No Detected Leaf' %}bg-secondary text-white
-                        {% else %}bg-danger text-white{% endif %} animate-pulse d-inline-block px-2 py-1 rounded-pill">
+                        {% else %}bg-danger text-white{% endif %} animate-pulse d-inline-block px-3 py-1 rounded-pill">
                         <i class="fas 
                             {% if prediction.status == 'Healthy' %}fa-check-circle
                             {% elif prediction.status == 'No Detected Leaf' %}fa-question-circle
